Still ned to fix demos.

--- a/docs/BLUE3x5PawnsBoardAugmentedDeck.config
+++ b/docs/BLUE3x5PawnsBoardAugmentedDeck.config
@@ -1,3 +1,27 @@
+Corrupt 1 3
+XXXXX
+XDDDD
+XXCXX
+XDDDD
+XXXXX
+Wither 1 2
+XXXXX
+XDDDD
+XXCXX
+XDDDD
+XXXXX
+Empower 2 2
+XXXXX
+XUIXU
+XXCXX
+XUIXU
+XXXXX
+Harmony 3 4
+XXXXX
+XUDUX
+XDCUX
+XUDUX
+XXXXX
 Barrier 1 2
 XXXXX
 XXXXX
@@ -22,47 +46,11 @@ XXUXX
 XUCUX
 XXUXX
 XXXXX
-Corrupt 1 3
-XXDXX
-XDXDX
-XXCXX
-XDXDX
-XXDXX
-Empower 2 2
-XXXXX
-XUIXU
-XXCXX
-XUIXU
-XXXXX
 Weaken 2 2
 XXXXX
 XDIXD
 XXCXX
 XDIXD
-XXXXX
-Harmony 3 4
-XXXXX
-XUDUX
-XDCUX
-XUDUX
-XXXXX
-Wither 1 2
-XDXDX
-XXXXX
-XXCXX
-XXXXX
-XDXDX
-Radiance 1 2
-XUXUX
-XXXXX
-XXCXX
-XXXXX
-XUXUX
-Fusion 2 3
-XXXXX
-XUUXX
-XXCXX
-XXDUX
 XXXXX
 Leech 2 1
 XXXXX
@@ -82,6 +70,18 @@ XIXIX
 XICIX
 XIXIX
 XXXXX
+Fusion 2 3
+XXXXX
+XUUXX
+XXCXX
+XXDUX
+XXXXX
+Radiance 1 2
+XUXUX
+XXXXX
+XXCXX
+XXXXX
+XUXUX
 Cyclone 3 4
 XIIIX
 IXXXI
