--- a/docs/RED3x5PawnsBoardAugmentedDeck.config
+++ b/docs/RED3x5PawnsBoardAugmentedDeck.config
@@ -1,3 +1,33 @@
+Upgrade 1 1
+XXXXX
+XUUUX
+XUCUX
+XUUUX
+XXXXX
+Bless 1 2
+XXXXX
+XUUUX
+XXCXX
+XUUUX
+XXXXX
+Spark 1 2
+XXXXX
+XIXIX
+XICIX
+XIXIX
+XXXXX
+Curse 2 2
+XXXXX
+XDIXD
+XXCXX
+XDIXD
+XXXXX
+Balance 3 4
+XXXXX
+XUDUX
+XICUX
+XUDUX
+XXXXX
 Valor 1 2
 XXXXX
 XXXIX
@@ -16,12 +46,6 @@ XXXXX
 XICIX
 XXXXX
 XXXXX
-Upgrade 1 1
-XXXXX
-XXUXX
-XUCUX
-XXUXX
-XXXXX
 Ruin 1 3
 XXDXX
 XDXDX
@@ -34,30 +58,6 @@ XUIXU
 XXCXX
 XUIXU
 XXXXX
-Curse 2 2
-XXXXX
-XDIXD
-XXCXX
-XDIXD
-XXXXX
-Balance 3 4
-XXXXX
-XUDUX
-XDCUX
-XUDUX
-XXXXX
-Decay 1 2
-XDXDX
-XXXXX
-XXCXX
-XXXXX
-XDXDX
-Bless 1 2
-XUXUX
-XXXXX
-XXCXX
-XXXXX
-XUXUX
 Dual 2 3
 XXXXX
 XUDXX
@@ -76,12 +76,12 @@ XXUXX
 XUCUX
 XXUXX
 XXXXX
-Spark 1 2
+Decay 1 2
+XDXDX
 XXXXX
-XIXIX
-XICIX
-XIXIX
+XXCXX
 XXXXX
+XDXDX
 Vortex 3 4
 XIIIX
 IXXXI
